Fixing responsive on mobile by adding @media queries at the bottom

--- a/style.css
+++ b/style.css
@@ -44,12 +44,13 @@ input[type="email"]:focus {
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   max-width: 100%;
+  text-align: center;
   height: auto;
 }
 .row:nth-child(1) {
-  grid-area: 1 / 1 / 3 / 2;
+  grid-area: 1 / 1 / 1 / 2;
   /* margin: 5em; */
   height: 100%;
 }
@@ -59,8 +60,12 @@ input[type="email"]:focus {
 .row:nth-child(3) {
   grid-area: 2 / 2 / 3/ 3;
 }
+.row:nth-child(4) {
+  grid-area: 2 / 1 / 3 / 2;
+}
 .labels {
   display: flex;
+  place-content: center;
 }
 h5:nth-child(1) {
   background: #f9f5ff;
@@ -89,6 +94,7 @@ img {
 }
 h1 {
   text-align: center;
+  color: #101828;
 }
 .container-two {
   display: grid;
@@ -123,6 +129,10 @@ a {
   }
   .row:nth-child(3) {
     grid-area: 3 / 3 / 5 / 4;
+    text-align: center;
+  }
+  .row:nth-child(4) {
+    grid-area: 4 / 3 / 4 / 4;
     text-align: center;
   }
   .labels {
